--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aditya Nepal's Blog</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <header>
         <div class="container">
             <h1>Aditya Nepal's Blog</h1>
             <p>Dallas, Texas | High School Student</p>
+            <nav>
+                <ul>
+                    <li><a href="#academics">Academics</a></li>
+                    <li><a href="#personal-growth">Personal Growth</a></li>
+                    <li><a href="#hobbies-interests">Hobbies & Interests</a></li>
+                    <li><a href="#travel-exploration">Travel & Exploration</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-    <nav>
-        <div class="container">
-            <ul>
-                <li><a href="#academics">Academics</a></li>
-                <li><a href="#personal-growth">Personal Growth</a></li>
-                <li><a href="#hobbies-interests">Hobbies & Interests</a></li>
-                <li><a href="#travel-exploration">Travel & Exploration</a></li>
-            </ul>
-        </div>
-    </nav>
     <main>
         <div class="container">
             <section id="academics">
