--- a/index.html
+++ b/index.html
@@ -3,56 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aditya Nepal's Blog</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <title>Manish Bh | Blog</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Aditya Nepal's Blog</h1>
-            <p>Dallas, Texas | High School Student</p>
-            <nav>
-                <ul>
-                    <li><a href="#academics">Academics</a></li>
-                    <li><a href="#personal-growth">Personal Growth</a></li>
-                    <li><a href="#hobbies-interests">Hobbies & Interests</a></li>
-                    <li><a href="#travel-exploration">Travel & Exploration</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <div class="container">
-            <section id="academics">
-                <h2>Academics</h2>
-                <p>Articles about my experiences in high school, including class projects, exams, and academic achievements.</p>
-            </section>
-            <section id="personal-growth">
-                <h2>Personal Growth</h2>
-                <p>Reflections on my personal growth, including goals, challenges, and lessons learned.</p>
-            </section>
-            <section id="hobbies-interests">
-                <h2>Hobbies & Interests</h2>
-                <p>Posts about my favorite hobbies and interests, including books, movies, and music.</p>
-            </section>
-            <section id="travel-exploration">
-                <h2>Travel & Exploration</h2>
-                <p>Stories about my travels and explorations, including trips to new places and experiences.</p>
-            </section>
-            <section id="recent-posts">
-                <h2>Recent Posts</h2>
-                <ul>
-                    <!-- Insert recent post titles and summaries here -->
-                </ul>
-            </section>
-        </div>
+        <section class="hero">
+            <h1>Manish Bh</h1>
+            <p>Welcome to my blog!</p>
+        </section>
+        <section class="posts">
+            <h2>Recent Posts</h2>
+            <ul>
+                <li>
+                    <h3>Post 1</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </li>
+                <li>
+                    <h3>Post 2</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </li>
+                <!-- Add more posts here -->
+            </ul>
+        </section>
     </main>
     <footer>
-        <div class="container">
-            <p>&copy; 2023 Aditya Nepal</p>
-            <p>Get in touch: <a href="mailto:aditya@example.com">aditya@example.com</a> | <a href="https://twitter.com/adityanepal">Twitter</a> | <a href="https://instagram.com/adityanepal">Instagram</a></p>
-        </div>
+        <p>&copy; 2023 Manish Bh</p>
     </footer>
     <script src="script.js"></script>
 </body>
